tests/paczka2/big_fuzzy/98202825.err
Error in line 2: RwLJgBMNF A787 78,9
Error in line 7: RwLJgBMNF A226 33,0
Error in line 17: jZ2I6M A991 18,6
Error in line 18: jZ2I6M A226 58,8
Error in line 28: ImTM A787 4,1
Error in line 29: ImTM A991 52,6
Error in line 36: pghLy A991 2,48
Error in line 53: jZ2I6M A438 15,4
Error in line 55: jZ2I6M A991 96,5
Error in line 60: A787 A226 43,5
Error in line 72: pghLy A991 15,4
Error in line 90: ImTM A226 ,1
Error in line 85: A787 A991 74,5
Error in line 89: jZ2I6M A787 4,8
Error in line 99: pghLy A787 6,4
Error in line 100: pghLy A226 88,6
Error in line 97: hxQ7 A438 71,9
Error in line 94: RwLJgBMNF A226 39,5
Error in line 108: hxQ7 A787 65,1
Error in line 109: RwLJgBMNF A787 42,6
Error in line 92: ImTM A226 11,9
Error in line 120: ImTM A787 -3,6
Error in line 114: hxQ7 A991 1,9
Error in line 131: jZ2I6M A787 72,0
Error in line 145: jZ2I6M A991 24,1
Error in line 149: jZ2I6M A226 -1,6
Error in line 151: A787 A787 278,74
Error in line 148: jZ2I6M A226 43,2
Error in line 161: RwLJgBMNF A991 39,2
Error in line 150: A787 A787 60,4
Error in line 166: RwLJgBMNF A226 4,6
Error in line 172: jZ2I6M A226 16,8
Error in line 175: ImTM A787 65,3
Error in line 179: hxQ7 A226 77,0
Error in line 178: ImTM A991 57,1
Error in line 198: ImTM A438 164,30
Error in line 165: pghLy A787 1,2
Error in line 192: ImTM A438 39,7
Error in line 200: pghLy A226 98,5
Error in line 196: A787 A991 136,7
Error in line 210: RwLJgBMNF A787 76,1
Error in line 217: BseW A226 50,1
Error in line 236: A787 A991 188,1
